trunk/Archive2/97/16b415a9656dd1/output
main.cpp:10:5: error: no matching function for call to 'foo'
    foo(index_sequence<0>{}, index_sequence<0, 1>{});
    ^~~
main.cpp:5:6: note: candidate function [with I = <0>, J = <>] not viable: no known conversion from 'index_sequence<[...], 1>' to 'index_sequence<[...], (no argument)>' for 2nd argument
void foo(index_sequence<I...>, index_sequence<I..., J...>)
     ^
1 error generated.
